--- a/Trabalho.Grpc/Trabalho.Grpc.Servidor/Properties/launchSettings.json
+++ b/Trabalho.Grpc/Trabalho.Grpc.Servidor/Properties/launchSettings.json
@@ -8,6 +8,14 @@
       "applicationUrl": "http://localhost:5117;https://localhost:7117",
       "dotnetRunMessages": true
     },
+    "SelfHosting": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5117;https://localhost:7117"
+    },
     "Docker": {
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
